securing-cluster-nodes/kubia-hostport.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-hostport
spec:
  containers:
    - image: ralitong/kubia
      name: kubia
      ports:
        - containerPort: 8080
          hostPort: 9000
          protocol: TCP
