securing-cluster-nodes/pod-privileged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-privileged
spec:
  containers:
    - name: main
      image: alpine
      command: ["/bin/sleep", "9999999"]
      securityContext:
        privileged: true
